--- a/Jenkins-Tomcat/docker-compose.yml
+++ b/Jenkins-Tomcat/docker-compose.yml
@@ -1,4 +1,4 @@
-#dockarized jenkins for CICD to build &merge code and result package [CI] to deploy it in tomcat [CD]
+#dockarized jenkins for CICD to build using xyz & merge code and result package [CI] to deploy it in tomcat [CD]
 version: '3.2'
 services:
   jenkins:
