--- a/Jenkins-Tomcat/docker-compose.yml
+++ b/Jenkins-Tomcat/docker-compose.yml
@@ -1,21 +1,25 @@
 #dockarized jenkins for CICD for importing developed&merged code and build package using xyz [CI/CD] to deploy it in tomcat [CD]
-version: '3.2'
+version: "3.7"
 services:
   jenkins:
     image: jenkins/jenkins
-    volumes:
-      - ./jenkins:/var/jenkins_home:rw
-      - ./war:/mnt/:rw   #war is shared dir
     ports:
-      - 8080:8080
+      - "8080:8080"
+      - "50000:50000"
+    volumes:
+          - jenkins:/var/jenkins_home:rw
+          - war:/mnt/:rw   #war is shared dir
     container_name: jenkins
-  
   tomcat:
     image: tomcat
     ports:
-      - 7777:8080
+      - "7777:7777"
     container_name: tomcat
     depends_on:
       - jenkins
     volumes:
-      - ./war/:/usr/local/tomcat/webapps    #war is shared dir
+     - war:/usr/local/tomcat/webapps    #war is shared dir
+
+volumes:
+   jenkins:
+   war:
